<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="currentExercise"
            type="com.jeremygiddings.assignment3.dataClasses.CurrentExercise" />

        <variable
            name="currentExerciseListener"
            type="com.jeremygiddings.assignment3.CurrentWorkoutListeners" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/current_exercise_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="6dp"
    android:background="@{currentExercise.isComplete ? @color/finished_green : @color/white}">


    <ImageButton
        android:id="@+id/completed_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/button_complete_content_description"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_tick_black_24dp"
        android:clickable="true"
        android:focusable="true"
        android:enabled="@{currentExercise.reps > 0}"
        android:onClick="@{() -> currentExerciseListener.onCompletedClicked(currentExercise)}"
        android:alpha="@{currentExercise.reps > 0? 1f : 0.5f}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{currentExercise.exercise.name}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/repsConstraintLayout"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weightConstraintLayout"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/completed_button"
        app:layout_constraintTop_toBottomOf="@+id/repsConstraintLayout"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="36dp"
            android:layout_height="41dp"
            android:layout_marginStart="40dp"
            android:ems="10"

            android:importantForAutofill="no"
            android:inputType="number"

            android:textAlignment="center"
            android:textIsSelectable="@{!currentExercise.isComplete}"
            app:layout_constraintStart_toEndOf="@+id/textView_Weight"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/textView_weight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.521" />

        <TextView
            android:id="@+id/textView_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/textView_weight_kg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toEndOf="@id/editTextWeight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.521" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/repsConstraintLayout"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@+id/completed_button"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_reps_plus"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:text="@string/button_plus"
            android:enabled="@{currentExercise.isComplete ? false : currentExercise.reps &lt; 99}"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@+id/editTextNumber"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/editTextNumber"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:text="@{String.valueOf(currentExercise.reps)}"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/button_reps_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_reps_minus"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/textView_reps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.521" />

        <Button
            android:id="@+id/button_reps_minus"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:enabled="@{currentExercise.isComplete ? false : currentExercise.reps > 0}"
            android:alpha="@{currentExercise.reps == 0? 0.5f : 1.0f}"
            android:text="@string/button_minus"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/textView_reps"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>