<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_current_workout"
        android:icon="@drawable/ic_workout_black_24dp"
        android:title="@string/title_current_workout" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />

</menu>